Integrate with API and add routes + componets

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,8 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.nav-menu .router-link-exact-active,
+.nav-menu .events.router-link-active {
+  color: #161e2e;
+}
